kubernetes/apps/network/envoy-gateway/app/misdirected.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: misdirected-request
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  hostnames:
    - noms.tv
    - "*.noms.tv"
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: misdirected-request
